Bug 2057452 - Wait for commands to be scheduled before compositing on Metal ANGLE. r=gfx-reviewers,bradwerth

RenderCompositorNative calls glFlush() prior to compositing its
layers. This is enough synchronisation on native GL on macOS, but on
Metal ANGLE we have observed intermittent tile shaped glitches.

It's hard to reproduce reliably, but as a speculative fix try waiting
for the prior commands to be scheduled using the
ANGLE_metal_commands_scheduled_sync extension.

Differential Revision: https://phabricator.services.mozilla.com/D313969