gfx/gl/GLLibraryEGL.cpp
@@ -98,6 +98,7 @@ static const char* sEGLExtensionNames[] = {
     "EGL_MESA_image_dma_buf_export",
     "EGL_KHR_no_config_context",
     "EGL_ANGLE_iosurface_client_buffer",
+    "EGL_ANGLE_metal_commands_scheduled_sync",
 };
 
 PRLibrary* LoadApitraceLibrary() {
