gfx/gl/GLLibraryEGL.h
@@ -123,6 +123,7 @@ enum class EGLExtension {
   MESA_image_dma_buf_export,
   KHR_no_config_context,
   ANGLE_iosurface_client_buffer,
+  ANGLE_metal_commands_scheduled_sync,
   Max
 };
 
